# iflytek_speech

iflytek_speech_recognition/: CMakeLists.txt  package.xml
iflytek_speech_recognition/config/msc/res/asr/GrmBuilld/: call.g  call_16K
iflytek_speech_recognition/include/iflytek_speech_recognition/: linuxrec.h  msp_cmn.h  qisr.h  speech_recognizer.h
iflytek_speech_recognition/launch/: iflytek_speech_recognition.launch
iflytek_speech_recognition/src/: asr_offline_record_sample.cpp  linuxrec.cpp  speech_recognizer (copy).cpp  speech_recognizer.cpp  tinyxml2.cpp
iflytek_speech_recognition/test/: test_xml.cpp
